infrastructure/configs/traefik/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: trusted-only
  namespace: kube-system
spec:
  ipAllowList:
    sourceRange:
      - "192.168.1.0/24"
      - "100.64.0.0/10"
      - "127.0.0.0/8"
      - "10.43.0.0/16"
      - "10.42.0.0/16"
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: kube-system
spec:
  redirectScheme:
    scheme: https
    permanent: true
