infrastructure/configs/traefik/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: kube-system
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/app: traefik
    gethomepage.dev/name: Traefik
    gethomepage.dev/description: Ingress controller
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/icon: traefik.png
    gethomepage.dev/href: https://traefik.${SECRET_DOMAIN}
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`traefik.${SECRET_DOMAIN}`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
      middlewares:
        - name: trusted-only
          namespace: kube-system
        - name: redirect-to-https
          namespace: kube-system
